app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: / # Al trafik til roden af domænet
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service # Send trafikken til denne service...
            port:
              number: 80 # ...på denne port.
